--- a/demos/forms.html
+++ b/demos/forms.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>modern-now</title>
-    <script type="module" src="../modern-now.min.js"></script>
+    <script type="module" src="../dist/full.js"></script>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <link rel="stylesheet" href="demo.css">
     <style>
         /* was-validated is necessary to avoid showing invalid styles on load */
         .is-invalid,
