--- a/demos/mark.html
+++ b/demos/mark.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>modern-now</title>
-    <script type="module" src="../modern-now.min.js"></script>
+    <script type="module" src="../dist/full.js"></script>
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <link rel="stylesheet" href="demo.css">
     <style>
         /* avoid fouc */
         mark[data-animated] {
