--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>modern-now</title>
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <link rel="stylesheet" href="demo.css">
     <style>
         .popover-support:after {
             content: '❌';
