--- a/demos/dialog.html
+++ b/demos/dialog.html
@@ -184,7 +184,13 @@
         <p>A simple dialog. Inside the modal, the <code>data-dialog-close</code> attribute can be used as a close trigger.</p>
         <button data-dialog="demo-dialog">Show dialog</button>
         <dialog id="demo-dialog">I'm a dialog
-            <button data-dialog-close>Close</button>
+            <button data-dialog-close>
+                <!-- clicking on a svg should still have the button as target -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                    <path
+                        d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z" />
+                </svg>
+                Close</button>
         </dialog>
 
         <p>A modal dialog (with <code>data-dialog-modal</code> attribute).</p>
