support closing modes

--- a/demos/dropdowns.html
+++ b/demos/dropdowns.html
@@ -53,6 +53,36 @@
             <li><a href="#" class="dropdown-item">Chocolate</a></li>
             <li><a href="#" class="dropdown-item">Bonbons</a></li>
         </ul>
+
+        <p>Closing modes : choose between manual, inside or outside</p>
+
+        <button type="button" data-dropdown="sweets-dropdown3" data-dropdown-close="manual">
+            Manual
+        </button>
+        <ul id="sweets-dropdown3" class="dropdown-menu" hidden>
+            <li><a href="#" class="dropdown-item">Donuts</a></li>
+            <li><a href="#" class="dropdown-item">Cupcakes</a></li>
+            <li><a href="#" class="dropdown-item">Chocolate</a></li>
+            <li><a href="#" class="dropdown-item">Bonbons</a></li>
+        </ul>
+        <button type="button" data-dropdown="sweets-dropdown4" data-dropdown-close="inside">
+            Inside
+        </button>
+        <ul id="sweets-dropdown4" class="dropdown-menu" hidden>
+            <li><a href="#" class="dropdown-item">Donuts</a></li>
+            <li><a href="#" class="dropdown-item">Cupcakes</a></li>
+            <li><a href="#" class="dropdown-item">Chocolate</a></li>
+            <li><a href="#" class="dropdown-item">Bonbons</a></li>
+        </ul>
+        <button type="button" data-dropdown="sweets-dropdown5" data-dropdown-close="outside">
+            Outside
+        </button>
+        <ul id="sweets-dropdown5" class="dropdown-menu" hidden>
+            <li><a href="#" class="dropdown-item">Donuts</a></li>
+            <li><a href="#" class="dropdown-item">Cupcakes</a></li>
+            <li><a href="#" class="dropdown-item">Chocolate</a></li>
+            <li><a href="#" class="dropdown-item">Bonbons</a></li>
+        </ul>
     </main>
 
     <footer>
