--- a/demos/toggle.html
+++ b/demos/toggle.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>modern-now</title>
     <script type="module" src="../dist/full.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="demo.css">
 </head>
 
@@ -80,6 +80,29 @@
                     sunt labore non consequat non ex culpa enim reprehenderit nulla cillum aute.</p>
             </details>
         </div>
+
+        <h2>Tabs</h2>
+
+        <p>Add tab like nav with `data-toggle-group`.</p>
+
+        <div>
+            <button data-toggle="london" data-toggle-group="cities">London</button>
+            <button data-toggle="paris" data-toggle-group="cities">Paris</button>
+            <button data-toggle="tokyo" data-toggle-group="cities">Tokyo</button>
+        </div>
+        <div id="london">
+            <h2>London</h2>
+            <p>London is the capital of England.</p>
+        </div>
+        <div id="paris" hidden>
+            <h2>Paris</h2>
+            <p>Paris is the capital of France.</p>
+        </div>
+        <div id="tokyo" hidden>
+            <h2>Tokyo</h2>
+            <p>Tokyo is the capital of Japan.</p>
+        </div>
+
     </main>
     <footer>
         <a href="https://github.com/lekoala/modern-now" target="_blank">Github</a> |
