--- a/demos/toggle.html
+++ b/demos/toggle.html
@@ -9,6 +9,21 @@
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="demo.css">
+    <style>
+        button[data-toggle-group] {
+            background: none;
+            color: var(--accent);
+        }
+        button[data-toggle-group]:hover {
+            background: var(--accent-bg);
+            color: var(--accent);
+        }
+
+        button[data-toggle-group][aria-selected="true"] {
+            background: var(--accent);
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
@@ -83,7 +98,7 @@
 
         <h2>Tabs</h2>
 
-        <p>Add tab like nav with `data-toggle-group`.</p>
+        <p>Add tab like nav with `data-toggle-group` and styling can be done through the aria attributes.</p>
 
         <div>
             <button data-toggle="london" data-toggle-group="cities">London</button>
