--- a/demos/dropdowns.html
+++ b/demos/dropdowns.html
@@ -9,6 +9,111 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <link rel="stylesheet" href="demo.css">
+
+    <style>
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
+        @keyframes fadeOut {
+            from {
+                opacity: 1;
+            }
+
+            to {
+                opacity: 0;
+            }
+        }
+
+        @keyframes zoomIn {
+            0% {
+                scale: 110%;
+            }
+
+            100% {
+                scale: 100%;
+            }
+        }
+
+        @keyframes zoomOut {
+            0% {
+                scale: 100%;
+            }
+
+            100% {
+                scale: 110%;
+            }
+        }
+
+        /* https://css-generators.com/tooltip-speech-bubble/ */
+        #arrow-drop {
+            --a: 90deg;
+            --h: 6px;
+            --p: 50%;
+            --r: 6px;
+            --b: 1px;
+            --c1: #eee;
+            --c2: #fff;
+
+            padding: 6px;
+            border-radius: min(var(--r), var(--p) - var(--h)*tan(var(--a)/2)) min(var(--r), 100% - var(--p) - var(--h)*tan(var(--a)/2)) var(--r) var(--r)/var(--r);
+            clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 0,
+                    min(100%, var(--p) + var(--h)*tan(var(--a)/2)) 0,
+                    var(--p) calc(-1*var(--h)),
+                    max(0%, var(--p) - var(--h)*tan(var(--a)/2)) 0);
+            background: var(--c1);
+            border-image: conic-gradient(var(--c1) 0 0) fill 0/ 0 max(0%, 100% - var(--p) - var(--h)*tan(var(--a)/2)) var(--r) max(0%, var(--p) - var(--h)*tan(var(--a)/2))/var(--h) 0 0 0;
+            position: relative;
+            animation: fadeIn 0s;
+        }
+
+        #arrow-drop:before {
+            content: "";
+            position: absolute;
+            z-index: -1;
+            inset: 0;
+            padding: var(--b);
+            border-radius: inherit;
+            clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 0,
+                    min(100% - var(--b), var(--p) + var(--h)*tan(var(--a)/2) - var(--b)*tan(45deg - var(--a)/4)) var(--b),
+                    var(--p) calc(var(--b)/sin(var(--a)/2) - var(--h)),
+                    max(var(--b), var(--p) - var(--h)*tan(var(--a)/2) + var(--b)*tan(45deg - var(--a)/4)) var(--b));
+            background: var(--c2) content-box;
+            border-image: conic-gradient(var(--c2) 0 0) fill 0/ 0 max(var(--b), 100% - var(--p) - var(--h)*tan(var(--a)/2)) var(--r) max(var(--b), var(--p) - var(--h)*tan(var(--a)/2))/var(--h) 0 0 0;
+        }
+
+        #arrow-drop[data-placement="top"] {
+            border-radius: var(--r) var(--r) min(var(--r), 100% - var(--p) - var(--h)*tan(var(--a)/2)) min(var(--r), var(--p) - var(--h)*tan(var(--a)/2))/var(--r);
+            clip-path: polygon(0 100%, 0 0, 100% 0, 100% 100%,
+                    min(100%, var(--p) + var(--h)*tan(var(--a)/2)) 100%,
+                    var(--p) calc(100% + var(--h)),
+                    max(0%, var(--p) - var(--h)*tan(var(--a)/2)) 100%);
+            border-image: conic-gradient(var(--c1) 0 0) fill 0/ var(--r) max(0%, 100% - var(--p) - var(--h)*tan(var(--a)/2)) 0 max(0%, var(--p) - var(--h)*tan(var(--a)/2))/0 0 var(--h) 0;
+        }
+
+        #arrow-drop[data-placement="top"]:before {
+            clip-path: polygon(0 100%, 0 0, 100% 0, 100% 100%,
+                    min(100% - var(--b), var(--p) + var(--h)*tan(var(--a)/2) - var(--b)*tan(45deg - var(--a)/4)) calc(100% - var(--b)),
+                    var(--p) calc(100% + var(--h) - var(--b)/sin(var(--a)/2)),
+                    max(var(--b), var(--p) - var(--h)*tan(var(--a)/2) + var(--b)*tan(45deg - var(--a)/4)) calc(100% - var(--b)));
+            border-image: conic-gradient(var(--c2) 0 0) fill 0/ var(--r) max(var(--b), 100% - var(--p) - var(--h)*tan(var(--a)/2)) 0 max(var(--b), var(--p) - var(--h)*tan(var(--a)/2))/0 0 var(--h) 0;
+        }
+
+
+        #arrow-drop.is-opening {
+            animation: fadeIn 0.3s, zoomIn 0.3s
+        }
+
+        #arrow-drop.is-closing {
+            animation: fadeOut 0.3s, zoomOut 0.3s
+        }
+    </style>
 </head>
 
 <body>
@@ -48,6 +153,19 @@
             Centered dropdown menu button
         </button>
         <ul id="sweets-dropdown2" class="dropdown-menu" hidden>
+            <li><a href="#" class="dropdown-item">Donuts</a></li>
+            <li><a href="#" class="dropdown-item">Cupcakes</a></li>
+            <li><a href="#" class="dropdown-item">Chocolate</a></li>
+            <li><a href="#" class="dropdown-item">Bonbons</a></li>
+        </ul>
+
+        <p>With arrows. Thanks to this <a href="https://css-generators.com/tooltip-speech-bubble/" target="_blank">wonderful technique</a>
+            we even support borders!</p>
+
+        <button type="button" data-dropdown="arrow-drop" data-dropdown-placement="bottom">
+            Dropdown with arrows and a fancy zoom animation
+        </button>
+        <ul id="arrow-drop" class="dropdown-menu" hidden>
             <li><a href="#" class="dropdown-item">Donuts</a></li>
             <li><a href="#" class="dropdown-item">Cupcakes</a></li>
             <li><a href="#" class="dropdown-item">Chocolate</a></li>
