--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
         <p>modern-now is a simple, just include, modular library that augments native html with useful behaviour. This allows you to define
             more things in html and do less in javascript.</p>
 
-        <p>It is powered by the very powerful <a href="https://github.com/WebReflection/nonchalance" target="_blank">nonchalance</a> library
-            that will automatically attach behaviours to html elements.</p>
+        <p>It is powered by the very powerful <a href="https://github.com/WebReflection/qsa-observer" target="_blank">qsa-observer</a>
+            and <a href="https://github.com/WebReflection/nonchalance" target="_blank">nonchalance</a> library
+            that will automatically attach behaviours to html elements, even when they are dynamically injected into the dom.</p>
 
         <h2>Check out the demos</h2>
         <ul>
