--- a/demos/toggle.html
+++ b/demos/toggle.html
@@ -10,18 +10,39 @@
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="demo.css">
     <style>
+        /* Tabs */
         button[data-toggle-group] {
             background: none;
             color: var(--accent);
         }
+
         button[data-toggle-group]:hover {
             background: var(--accent-bg);
             color: var(--accent);
         }
 
-        button[data-toggle-group][aria-selected="true"] {
+        button[data-toggle-group][aria-selected="true"],button[data-toggle-group]:active {
             background: var(--accent);
             color: white;
+        }
+
+        /* Btn pressed */
+        @keyframes btn-pressed {
+            0% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(0.95);
+            }
+
+            100% {
+                transform: scale(1);
+            }
+        }
+
+        button:active {
+            animation: btn-pressed 0.3s;
         }
     </style>
 </head>
@@ -95,6 +116,8 @@
                     sunt labore non consequat non ex culpa enim reprehenderit nulla cillum aute.</p>
             </details>
         </div>
+
+        <p>Also check out <a href="toggle-bootstrap.html"> demo with bootstrap styles</a>.</p>
 
         <h2>Tabs</h2>
 
