--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <li><a href="demos/toggle.html">Toggle</a></li>
             <li><a href="demos/tooltips.html">Tooltips</a></li>
             <li><a href="demos/dropdowns.html">Dropdowns</a></li>
+            <li><a href="demos/calendar.html">Calendar</a></li>
             <li><a href="demos/number.html">Number</a></li>
             <li><a href="demos/time.html">Time</a></li>
             <li><a href="demos/mark.html">Mark</a></li>
