--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <li><a href="demos/mark.html">Mark</a></li>
             <li><a href="demos/behaviour.html">Behaviour</a></li>
             <li><a href="demos/htmx.html">Htmx</a></li>
+            <li><a href="demos/cmd.html">Cmd</a></li>
         </ul>
 
         <p>And some <a href="demos/notes.html">side notes</a>.</p>
