--- a/demos/calendar.html
+++ b/demos/calendar.html
@@ -44,6 +44,12 @@
             text-align: center;
         }
     </style>
+
+    <style>
+        .cal-drop {
+            background:#fff;padding:1em;filter: drop-shadow(5px 5px 10px rgba(0,0,0,0.2));
+        }
+    </style>
 </head>
 
 <body>
@@ -87,7 +93,7 @@
         <div>
             <input type="hidden" id="calendar-input" data-to="calendar-input-fmt" data-to-transform="dmy" />
             <input type="text" id="calendar-input-fmt" data-limited="mask" data-mask="99/99/9999" data-to="calendar-input" data-to-transform="ymd" placeholder="dd/mm/yyyy" size="10">
-            <button data-dropdown="calendar-dropdown" data-dropdown-close=".is-date">
+            <button data-dropdown="calendar-dropdown" data-dropdown-close="outside,.is-date">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#fff" viewBox="0 0 256 256">
                     <path
                         d="M208,32H184V24a8,8,0,0,0-16,0v8H88V24a8,8,0,0,0-16,0v8H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32ZM72,48v8a8,8,0,0,0,16,0V48h80v8a8,8,0,0,0,16,0V48h24V80H48V48ZM208,208H48V96H208V208Z">
@@ -95,7 +101,7 @@
                 </svg>
             </button>
         </div>
-        <div id="calendar-dropdown" hidden style="background:#fff;padding:1em;filter: drop-shadow(5px 5px 10px rgba(0,0,0,0.2));">
+        <div id="calendar-dropdown" class="cal-drop" data-dropdown-placement="top-center" hidden>
             <div data-calendar="lang:'fr', controls: true, click: 'calendar-input', tableClass:'dropdown-table'"></div>
         </div>
     </main>
