--- a/demos/dialog-ajax.html
+++ b/demos/dialog-ajax.html
@@ -1,1 +1,1 @@
-<p>This content is loaded with ajax</p>
+<p>This content is loaded with <span data-tooltip title="A tooltip that works thanks to popover">ajax</a></p>
