--- a/demos/tooltips.html
+++ b/demos/tooltips.html
@@ -54,6 +54,8 @@
 
         <h3>Demo</h3>
 
+        <p>A <span data-tooltip="" title="Always visible" data-tooltip-visible="true">tooltip that is always visible</span> thanks to <code>data-tooltip-visible="true"</code>.</p>
+
         <p>Nostrud deserunt culpa aliqua mollit sit ex mollit irure incididunt non anim. Anim aliquip ullamco
             dolor anim Lorem
             deserunt <a href="#" data-tooltip title="Some tooltip">i have a tooltip</a> consectetur consectetur aliquip voluptate. Esse
