fix smooth scrolling and tooltip position

--- a/demos/dialog-ajax.html
+++ b/demos/dialog-ajax.html
@@ -1,1 +1,2 @@
 <p>This content is loaded with <span data-tooltip title="A tooltip that works thanks to popover">ajax</a></p>
+<p><mark data-animated>Incredible</mark>, isn't it?</p>
