--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             <li><a href="demos/time.html">Time</a></li>
             <li><a href="demos/mark.html">Mark</a></li>
             <li><a href="demos/behaviour.html">Behaviour</a></li>
-            <li><a href="demos/htmx.html">Htmx</a></li>
-            <li><a href="demos/cmd.html">Cmd</a></li>
+            <li><a href="demos/hx.html">Hx (htmlx inspired)</a></li>
+            <li><a href="demos/cmd.html">Cmd (invokers inspired)</a></li>
         </ul>
 
         <p>And some <a href="demos/notes.html">side notes</a>.</p>
