--- a/demos/inputs.html
+++ b/demos/inputs.html
@@ -75,6 +75,10 @@
                 <textarea id="input-autogrow" name="autogrow" data-autogrow></textarea>
             </div>
             <div>
+                <label for="input-autogrowborder">Textarea autogrow with borders</label>
+                <textarea id="input-autogrowborder" name="autogrowborder" data-autogrow style="border:5px solid"></textarea>
+            </div>
+            <div>
                 <label for="input-autogrow_trim">Textarea autogrow + trim</label>
                 <textarea id="input-autogrow_trim" name="autogrow" data-autogrow data-trim></textarea>
             </div>
