basic input tel

--- a/demos/inputs.html
+++ b/demos/inputs.html
@@ -191,6 +191,12 @@
                 <p><small>For a more robust solution, use <a href="https://formidable-elements.vercel.app/demo/tel-input.html"
                             target="_blank">intl-tel-input</a></small>
                 </p>
+
+                <p>You can also use custom tel input</p>
+
+                <input type="tel" id="custom-input-tel" name="custom_tel" value="+32" data-tel>
+                <input type="tel" id="custom-input-tel-v" name="custom_tel_v" value="+32470123456" data-tel>
+                <input type="tel" id="custom-input-tel-ctry" name="custom_tel_ctry" value="" data-tel data-country="be">
             </div>
         </form>
 
