fix initialized set

--- a/demos/inputs.html
+++ b/demos/inputs.html
@@ -207,8 +207,7 @@
         <form method="post" action="https://vercel-dumper.vercel.app/">
             <div>
                 <label for="input-bound">Bound with a tooltip to an input that normalize the string to a valid url segment</label>
-                <input type="text" id="input-bound" name="bound" data-to="input-bound2"
-                    data-tooltip="placement: 'left', target:'customtooltip'">
+                <input type="text" id="input-bound" name="bound" data-to="input-bound2" data-tooltip="placement: 'left', target:'customtooltip'">
                 <div class="tooltip" id="customtooltip" hidden>
                     This is a custom input<br />Any value is replicated in the other one
                 </div>
