--- a/demos/inputs.html
+++ b/demos/inputs.html
@@ -144,6 +144,10 @@
                 <input type="text" id="input-numeric" name="numeric" data-limited="numeric">
             </div>
             <div>
+                <label for="input-currency">Limited numeric (currency, allows two decimals)</label>
+                <input type="text" id="input-currency" name="currency" data-limited="currency">
+            </div>
+            <div>
                 <label for="input-int">Limited int</label>
                 <input type="text" id="input-int" name="int" data-limited="int">
             </div>
